test/classes/initializers/phase2/modifyParentConst.good
modifyParentConst.chpl:12: In initializer:
modifyParentConst.chpl:14: error: cannot update a const field, "x", from parent type in phase 2
